[tool.poetry]
name = "qovery"
version = "1.0.3"
description = "Qovery API"
authors = ["Qovery Product Team <support+api+documentation@qovery.com>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/qovery/qovery-client-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Qovery API"]
include = ["qovery/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
